pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: meu-pod1
  labels:
    app: web
    version: blue
spec:
  containers:
    - name: web
      image: kubedevio/web-color:blue
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
---
apiVersion: v1
kind: Pod
metadata:
  name: meu-pod2
  labels:
    app: web
    version: green
spec:
  containers:
    - name: web
      image: kubedevio/web-color:green
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
