postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec:
  selector:
    matchLabels:
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:15.0
          ports:
          - containerPort: 5432
          volumeMounts:
            - mountPath: "/var/lib/postgresql/data"
              subPath: "pgdata"
              name: db-vol
      volumes:
        - name: db-vol
          hostPath:
            path: /k3d/images
            type: Directory
