deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: nginx
spec:
    selector:
        matchLabels:
            app: nginx-state
    replicas: 5
    template:
        metadata:
            labels:
                app: nginx-state
        spec:
            containers:
                - name: nginx
                  image: nginx
                  ports:
                      - containerPort: 80
                        name: web
---
apiVersion: v1
kind: Service
metadata:
    name: nginx
spec:
    selector:
        app: nginx-state
    clusterIP: None
    ports:
        - port: 80
          targetPort: 80
