deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: producao
spec:
  replicas: 4
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: kubedevio/web-color:blue
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: producao
spec:
  selector:
    app: web
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
      nodePort: 30000
  type: NodePort
