headless-svc.yml
apiVersion: v1                   
kind: Service                     
metadata:
  name: nginx                     
spec:
  selector:
    app: nginx-state             
  clusterIP: None                 
  ports:
    - port: 80                    
      targetPort: 80
