postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec:
  selector: 
    app: postgre
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30000
  type: LoadBalancer
