web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ExternalName
  externalName: web.producao.svc.cluster.local
