ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress-default
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx
      port:
        number: 80
