ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-simples
spec:
  ingressClassName: <nome do ingress>
  rules:
    - http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: <Service>
              port: 
                number: <Port>
